# tree-sitter-styled

./: .gitmodules  .ignore  .npmignore  .prettierignore  .prettierrc  Cargo.toml  README.md  binding.gyp  grammar.js  package-lock.json  package.json
.github/workflows/: ci.yml  update-css-parser.yml
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
scripts/: update-parser.sh
src/: grammar.json  node-types.json  parser.c  scanner.c  scanner.cc
test/corpus/: psuedo-element-args.txt  styled.txt
