[package]
name = "tree-sitter-styled"
description = "styled-components grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "styled-components"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-styled"
edition = "2018"
license = "ISC"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.3"

[build-dependencies]
cc = "1.0"
